--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -5639,6 +5639,11 @@
       "id": 1257,
       "a": "1215",
       "e": "dfxvxvdf"
+    },
+    {
+      "id": 1258,
+      "a": "اختر نوع المناقصة",
+      "e": "Select the type of tender"
     }
   ]
 }
