--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -5654,6 +5654,11 @@
       "id": 1260,
       "a": "بند جديد",
       "e": "New item"
+    },
+    {
+      "id": 1261,
+      "a": "ترقيم",
+      "e": "Numbering"
     }
   ]
 }
