--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -5659,6 +5659,11 @@
       "id": 1261,
       "a": "ترقيم",
       "e": "Numbering"
+    },
+    {
+      "id": 1262,
+      "a": "ختيار وحدة قياس البند",
+      "e": "select measurement unit"
     }
   ]
 }
