--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -1877,8 +1877,8 @@
     },
     {
       "id": 439,
-      "a": "رابط تحميل ملفات ملحقة",
-      "e": "Attached files download link"
+      "a": "رابط ملفات ملحقة",
+      "e": "Attached files link"
     },
     {
       "id": 440,
@@ -5674,6 +5674,16 @@
       "id": 1265,
       "a": "رسم",
       "e": "Chart"
+    },
+    {
+      "id": 1266,
+      "a": "فتح الرابط",
+      "e": "Open link"
+    },
+    {
+      "id": 1267,
+      "a": "وصف",
+      "e": "Description"
     }
   ]
 }
