--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -4762,8 +4762,8 @@
     },
     {
       "id": 1065,
-      "a": "حصر",
-      "e": "Bill"
+      "a": "فاتورة الكميات",
+      "e": "BOQ"
     },
     {
       "id": 1066,
