--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -403,7 +403,7 @@
     {
       "id": 112,
       "a": "عدد",
-      "e": "No ."
+      "e": "Number of"
     },
     {
       "id": 113,
@@ -4762,7 +4762,7 @@
     },
     {
       "id": 1065,
-      "a": "فاتورة الكميات",
+      "a": "فاتورة",
       "e": "BOQ"
     },
     {
@@ -5684,6 +5684,11 @@
       "id": 1267,
       "a": "وصف",
       "e": "Description"
+    },
+    {
+      "id": 1268,
+      "a": "اضافة فاتورة",
+      "e": "add BOQ"
     }
   ]
 }
