--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -5694,6 +5694,16 @@
       "id": 1269,
       "a": "التكلفه",
       "e": "cost"
+    },
+    {
+      "id": 1270,
+      "a": "ادوات",
+      "e": "tools"
+    },
+    {
+      "id": 1271,
+      "a": "حاسبة",
+      "e": "calculator"
     }
   ]
 }
