--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -5704,6 +5704,11 @@
       "id": 1271,
       "a": "حاسبة",
       "e": "calculator"
+    },
+    {
+      "id": 1272,
+      "a": "أسعار الصرف",
+      "e": "Exchange Rates"
     }
   ]
 }
