--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -677,8 +677,8 @@
     },
     {
       "id": 168,
-      "a": " طباعة",
-      "e": " Print"
+      "a": "طباعة",
+      "e": "Print"
     },
     {
       "id": 169,
@@ -5724,6 +5724,11 @@
       "id": 1275,
       "a": "اختر العملة المستهدف",
       "e": "Select the target currency"
+    },
+    {
+      "id": 1276,
+      "a": "مقايسة",
+      "e": "Estimate"
     }
   ]
 }
