--- a/code/lang/data_lang.json
+++ b/code/lang/data_lang.json
@@ -4077,8 +4077,8 @@
     },
     {
       "id": 906,
-      "a": "نص البند",
-      "e": "Modify item data"
+      "a": "وصف البند",
+      "e": "Item Description"
     },
     {
       "id": 907,
